tests/lexer/valid/test_comment_only.tok
1:16 END_OF_FILE ""
