tests/lexer/invalid/test_number_out_of_range.tok
1:1 INT_LITERAL "2147483648" 0
1:11 END_OF_FILE ""
